Fix review feedback: normalize() dedup, getFirst→get(0), distinct test strings with section-label assertions
Agent-Logs-Url: https://github.com/micronaut-projects/micronaut-langchain4j/sessions/ab9e307f-8863-487c-9ddd-0357d802a1fd

Co-authored-by: graemerocher <66626+graemerocher@users.noreply.github.com>